--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,16 @@
     <build>
         <pluginManagement>
             <plugins>
-                              <plugin>
+                      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <source>1.8</source>
+          <target>1.8</target>
+        </configuration>
+      </plugin>
+                    <plugin>
                     <groupId>org.apache.maven.plugins</groupId>
                     <artifactId>maven-war-plugin</artifactId>
                     <version>2.4</version>
@@ -39,7 +48,7 @@
             </plugins>
         </pluginManagement>
         <plugins>
-                       <plugin>
+                <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-war-plugin</artifactId>
                 <configuration>
